# gapido-auth-service

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
protos/: auth.proto  demo.proto
src/gapido_auth/: authz.py  config.py  server.py  worker.py
src/gapido_auth/core/: errors.py  otp.py  tokens.py
src/gapido_auth/db/: __init__.py  mongo.py  repositories.py
src/gapido_auth/interceptors/: __init__.py  auth.py
src/gapido_auth/messaging/: publisher.py  topology.py
src/gapido_auth/proto/: auth_pb2.py  auth_pb2_grpc.py  demo_pb2.py  demo_pb2_grpc.py
src/gapido_auth/services/: __init__.py  auth_servicer.py  demo_servicer.py
src/gapido_auth/sms/: __init__.py  kavenegar.py  provider.py
tests/: conftest.py  fakes.py  test_access_control.py  test_config.py  test_kavenegar.py  test_otp.py  test_tokens.py  test_worker.py
tests/integration/: test_full_flow.py
