[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gapido-auth-service"
version = "1.0.0"
description = "Authentication & authorization microservice: gRPC, MongoDB, RabbitMQ, Kavenegar OTP"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.62",
    "grpcio-health-checking>=1.62",
    "grpcio-reflection>=1.62",
    "protobuf>=4.25",
    "pymongo>=4.6",
    "pika>=1.3",
    "PyJWT>=2.8",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "grpcio-tools>=1.62",
    "pytest>=8.0",
    "pytest-cov>=4.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that need live MongoDB/RabbitMQ (run via docker compose)",
]
addopts = "-m 'not integration'"
